[FIX] content width on mobile

--- a/app/assets/styles/style-mobile.css
+++ b/app/assets/styles/style-mobile.css
@@ -39,7 +39,7 @@
     width: 100%;
   }
   .content1 img, .content1 img, .content2 img{
-    width: 100%;
+    min-width: 100%;
   }
   .footer {
     position: relative;
